# turbopipes

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: ci
tests/: test_aparallel.py  test_misc.py
turbopipes/: __init__.py  _aparallel.py  _misc.py
